data: script cleanups

--- a/data/create_dataset.ipynb
+++ b/data/create_dataset.ipynb
@@ -290,21 +290,13 @@
       "generated 3806250 examples, 2279 positive 3803971 negative.\n",
       "final generated 4545 examples, 2279 positive 2266 negative.\n",
       "saving to: ./our_datasets/laptop_train.json.\n",
-      "found 475/638 unique queries.\n",
-      "found 800 documents.\n",
-      "generated 380000 examples, 637 positive 379363 negative.\n",
-      "final generated 1266 examples, 637 positive 629 negative.\n",
-      "saving to: ./our_datasets/laptop_test.json.\n",
-      "found 642/1120 unique queries.\n",
-      "found 800 documents.\n",
-      "generated 513600 examples, 1117 positive 512483 negative.\n",
-      "final generated 2237 examples, 1117 positive 1120 negative.\n",
-      "saving to: ./our_datasets/restaurant_test.json.\n",
+      "\n",
       "found 1560/3602 unique queries.\n",
       "found 3041 documents.\n",
       "generated 4743960 examples, 3580 positive 4740380 negative.\n",
-      "final generated 7041 examples, 3580 positive 3461 negative.\n",
-      "saving to: ./our_datasets/restaurant_train.json.\n"
+      "final generated 7102 examples, 3580 positive 3522 negative.\n",
+      "saving to: ./our_datasets/restaurant_train.json.\n",
+      "\n"
      ]
     }
    ],
@@ -350,6 +342,9 @@
     "                    continue \n",
     "\n",
     "                as_pairs.append((aspect, sentiment))\n",
+    "                \n",
+    "            as_pairs = list(set(as_pairs))\n",
+    "            as_pairs.sort()\n",
     "\n",
     "            all_docs.append({\n",
     "              'doc': doc,\n",
@@ -358,20 +353,19 @@
     "\n",
     "        print('found {} documents.'.format(len(all_docs)))\n",
     "\n",
+    "    # create examples for all unique queries and docs\n",
     "    examples = []\n",
     "    num_pos = 0 \n",
     "    num_neg = 0 \n",
-    "\n",
-    "    # create examples for all unique queries and docs \n",
+    " \n",
     "    for query_id, query in enumerate(queries):\n",
     "        for doc_id, doc_ex in enumerate(all_docs):\n",
-    "\n",
-    "            label = 0\n",
     "\n",
     "            if query in doc_ex['pairs']:\n",
     "                label = 1\n",
     "                num_pos += 1\n",
     "            else:\n",
+    "                label = 0\n",
     "                num_neg += 1\n",
     "\n",
     "            example = {\n",
@@ -388,27 +382,32 @@
     "\n",
     "    # Resampling\n",
     "    final_examples = []\n",
+    "\n",
     "    sample_rate = int(num_neg/num_pos)\n",
     "\n",
     "    # sample negative examples to get more even distribution\n",
     "    new_num_neg = 0\n",
+    "\n",
     "    for example in examples:\n",
     "        if example['label'] == 1:\n",
     "            final_examples.append(example)\n",
     "        else:\n",
-    "            if random.randint(0,sample_rate-1) != (sample_rate-1):\n",
+    "            if random.randint(0, sample_rate-1) != (sample_rate-1):\n",
     "                continue\n",
     "\n",
     "            final_examples.append(example)\n",
-    "            new_num_neg += 1\n",
     "\n",
+    "            new_num_neg += 1\n",
     "\n",
     "    print('final generated {} examples, {} positive {} negative.'.format(len(final_examples), num_pos, new_num_neg))\n",
     "\n",
     "    # write file\n",
     "    print('saving to: {}.'.format(savepath))\n",
+    "\n",
     "    with open(savepath, 'w') as fout:\n",
-    "        json.dump(final_examples , fout)"
+    "        json.dump(final_examples , fout)\n",
+    "        \n",
+    "    print()"
    ]
   },
   {
@@ -438,8 +437,8 @@
       "text/plain": [
        "{'query_id': 0,\n",
        " 'query': (\"'gourmet' Indian cuisine\", 'neutral'),\n",
-       " 'doc_id': 955,\n",
-       " 'doc': 'Make reservations but expect to be delayed 15-20 minutes as the hosting staff was having difficulty seating guests who arrived with a reservation because they probably had a lot of walk ins being so close to Time Square.',\n",
+       " 'doc_id': 798,\n",
+       " 'doc': \"I went to Ruby Foo's after work with a group of 6.\",\n",
        " 'label': 0}"
       ]
      },
