--- a/data/create_dataset_partially_correct_cosine.ipynb
+++ b/data/create_dataset_partially_correct_cosine.ipynb
@@ -281,15 +281,15 @@
       "Processing Laptop_Train_v2.xml\n",
       "found 1250/2313 unique queries.\n",
       "found 3045 documents.\n",
-      "generated 2891250 examples, 2313 positive 2151 aspect only, 1007481 sentiment only, 1879305 negative.\n",
-      "final generated 9130 examples, 2313 positive 2151 aspect only, 2360 sentiment only, 2306 negative.\n",
+      "generated 2848750 examples, 2279 positive 2107 aspect only, 992013 sentiment only, 1852351 negative.\n",
+      "final generated 8940 examples, 2279 positive 2107 aspect only, 2275 sentiment only, 2279 negative.\n",
       "saving to: ./our_datasets_partially_correct_labels_cosine/laptop_train.json.\n",
       "\n",
       "Processing Restaurants_Train_v2.xml\n",
       "found 1560/3602 unique queries.\n",
       "found 3041 documents.\n",
-      "generated 5619120 examples, 3602 positive 4239 aspect only, 2403812 sentiment only, 3207467 negative.\n",
-      "final generated 15018 examples, 3602 positive 4239 aspect only, 3576 sentiment only, 3601 negative.\n",
+      "generated 5584800 examples, 3580 positive 4205 aspect only, 2390610 sentiment only, 3186405 negative.\n",
+      "final generated 14884 examples, 3580 positive 4205 aspect only, 3567 sentiment only, 3532 negative.\n",
       "saving to: ./our_datasets_partially_correct_labels_cosine/restaurant_train.json.\n",
       "\n"
      ]
@@ -316,7 +316,9 @@
     "                if sentiment != 'conflict': \n",
     "                    all_queries.append((aspect,sentiment))\n",
     "\n",
-    "        queries = set(all_queries)\n",
+    "        queries = list(set(all_queries))\n",
+    "        queries.sort()\n",
+    "\n",
     "        print('found {}/{} unique queries.'.format(len(queries), len(all_queries)))\n",
     "\n",
     "    # find document, (aspect, sentiment) pairs (documents and their relevance judgements)\n",
@@ -338,6 +340,9 @@
     "                    continue \n",
     "\n",
     "                as_pairs.append((aspect, sentiment))\n",
+    "                \n",
+    "            as_pairs = list(set(as_pairs))\n",
+    "            as_pairs.sort()\n",
     "\n",
     "            all_docs.append({'doc': doc, 'pairs': as_pairs})\n",
     "\n",
@@ -383,10 +388,9 @@
     "\n",
     "    print('generated {} examples, {} positive {} aspect only, {} sentiment only, {} negative.'.format(len(examples), num_pos, num_aspect_only, num_sentiment_only, num_neg))\n",
     "\n",
+    "    # sample negative examples to get more even distribution\n",
     "    final_examples = []\n",
     "\n",
-    "\n",
-    "    # sample negative examples to get more even distribution\n",
     "    new_num_aspect_only = 0\n",
     "    new_num_sentiment_only = 0\n",
     "    new_num_neg = 0\n",
@@ -472,10 +476,10 @@
      "data": {
       "text/plain": [
        "{'query_id': 0,\n",
-       " 'query': ('take out', 'neutral'),\n",
-       " 'doc_id': 538,\n",
-       " 'doc': \"i don't usually order wine with indian so i can't comment on their wine list or their wines.\",\n",
-       " 'label': 0.2}"
+       " 'query': (\"'gourmet' Indian cuisine\", 'neutral'),\n",
+       " 'doc_id': 103,\n",
+       " 'doc': 'The atmosphere is unheralded, the service impecible, and the food magnificant.',\n",
+       " 'label': 0}"
       ]
      },
      "execution_count": 9,
