--- a/data/create_dataset_partially_correct_softmax.ipynb
+++ b/data/create_dataset_partially_correct_softmax.ipynb
@@ -281,15 +281,15 @@
       "Processing Laptop_Train_v2.xml\n",
       "found 1250/2313 unique queries.\n",
       "found 3045 documents.\n",
-      "generated 2891250 examples, 2313 positive 2151 aspect only, 1007481 sentiment only, 1879305 negative.\n",
-      "final generated 9127 examples, 2313 positive 2151 aspect only, 2342 sentiment only, 2321 negative.\n",
+      "generated 2848750 examples, 2279 positive 2107 aspect only, 992013 sentiment only, 1852351 negative.\n",
+      "final generated 8940 examples, 2279 positive 2107 aspect only, 2275 sentiment only, 2279 negative.\n",
       "saving to: ./our_datasets_partially_correct_labels/laptop_train.json.\n",
       "\n",
       "Processing Restaurants_Train_v2.xml\n",
       "found 1560/3602 unique queries.\n",
       "found 3041 documents.\n",
-      "generated 5619120 examples, 3602 positive 4239 aspect only, 2403812 sentiment only, 3207467 negative.\n",
-      "final generated 14855 examples, 3602 positive 4239 aspect only, 3476 sentiment only, 3538 negative.\n",
+      "generated 5584800 examples, 3580 positive 4205 aspect only, 2390610 sentiment only, 3186405 negative.\n",
+      "final generated 14884 examples, 3580 positive 4205 aspect only, 3567 sentiment only, 3532 negative.\n",
       "saving to: ./our_datasets_partially_correct_labels/restaurant_train.json.\n",
       "\n"
      ]
@@ -340,11 +340,15 @@
     "                    continue \n",
     "\n",
     "                as_pairs.append((aspect, sentiment))\n",
+    "                \n",
+    "            as_pairs = list(set(as_pairs))\n",
+    "            as_pairs.sort()\n",
     "\n",
     "            all_docs.append({'doc': doc, 'pairs': as_pairs})\n",
     "\n",
-    "        print('found {} documents.'.format(len(all_docs)))\n",
+    "    print('found {} documents.'.format(len(all_docs)))\n",
     "\n",
+    "    # create examples for all unique queries and docs \n",
     "    examples = []\n",
     "\n",
     "    num_pos = 0\n",
@@ -352,12 +356,8 @@
     "    num_sentiment_only = 0\n",
     "    num_neg = 0 \n",
     "\n",
-    "    # create examples for all unique queries and docs \n",
     "    for query_id, query in enumerate(queries):\n",
-    "        # print('current unique query: {}'.format(query))\n",
     "        for doc_id, doc_ex in enumerate(all_docs):\n",
-    "            # print(cur_qs)\n",
-    "\n",
     "            # If `query = (aspect, sentiment)` is in one of the [(aspect, sentiment)] labels\n",
     "            for aspect_sentiment in doc_ex['pairs']:\n",
     "                if query[0] == aspect_sentiment[0] and query[1] == aspect_sentiment[1]:\n",
@@ -383,12 +383,13 @@
     "\n",
     "                examples.append(example)\n",
     "\n",
-    "    print('generated {} examples, {} positive {} aspect only, {} sentiment only, {} negative.'.format(len(examples), num_pos, num_aspect_only, num_sentiment_only, num_neg))\n",
-    "\n",
-    "    final_examples = []\n",
-    "\n",
+    "    print(\n",
+    "        'generated {} examples, {} positive {} aspect only, {} sentiment only, {} negative.'.format(\n",
+    "            len(examples), num_pos, num_aspect_only, num_sentiment_only, num_neg))\n",
     "\n",
     "    # sample negative examples to get more even distribution\n",
+    "    final_examples = []\n",
+    "\n",
     "    new_num_aspect_only = 0\n",
     "    new_num_sentiment_only = 0\n",
     "    new_num_neg = 0\n",
@@ -475,8 +476,8 @@
       "text/plain": [
        "{'query_id': 0,\n",
        " 'query': (\"'gourmet' Indian cuisine\", 'neutral'),\n",
-       " 'doc_id': 901,\n",
-       " 'doc': 'Barbecued codfish was gorgeously moist - as if poached - yet the fabulous texture was let down by curiously bland seasoning - a spice rub might have overwhelmed, however herb mix or other sauce would have done much to enhance.',\n",
+       " 'doc_id': 103,\n",
+       " 'doc': 'The atmosphere is unheralded, the service impecible, and the food magnificant.',\n",
        " 'label': 0}"
       ]
      },
@@ -488,6 +489,13 @@
    "source": [
     "final_examples[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
