siamese: add jsonlines==1.2.0 to google colab setups

--- a/siamese/sentence_bert_softmax.ipynb
+++ b/siamese/sentence_bert_softmax.ipynb
@@ -62,10 +62,10 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0 jsonlines==1.2.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
-    "    %cd '/content/drive/My Drive/CS646_Final_Project'\n",
+    "    %cd '/content/drive/My Drive/CS646_Final_Project/siamese'\n",
     "    \n",
     "    # List the directory contents\n",
     "    !ls"
@@ -284,10 +284,10 @@
    "outputs": [],
    "source": [
     "# 4 labels (1: Relevant, 2: Aspect only, 3: Sentiment only, 4: Not Relevant): Softmax Loss\n",
-    "with open(os.path.join('.', 'data', 'our_datasets_partially_correct_labels', 'laptop_train.json')) as laptop_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets_partially_correct_labels', 'laptop_train.json')) as laptop_train_file:\n",
     "    laptop_train = json.load(laptop_train_file)\n",
     "\n",
-    "with open(os.path.join('.', 'data', 'our_datasets_partially_correct_labels', 'restaurant_train.json')) as restaurants_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets_partially_correct_labels', 'restaurant_train.json')) as restaurants_train_file:\n",
     "    restaurants_train = json.load(restaurants_train_file)"
    ]
   },
@@ -1081,13 +1081,6 @@
     "        with open(os.path.join(test_restaurants_result_path, test_restaurants_result_file), 'a') as f:\n",
     "            f.write(\"%s\\n\" % line)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
