--- a/siamese/sentence_bert_contrastive.ipynb
+++ b/siamese/sentence_bert_contrastive.ipynb
@@ -62,10 +62,10 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0 jsonlines==1.2.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
-    "    %cd '/content/drive/My Drive/CS646_Final_Project/Siamese'\n",
+    "    %cd '/content/drive/My Drive/CS646_Final_Project/siamese'\n",
     "    \n",
     "    # List the directory contents\n",
     "    !ls"
