--- a/siamese/sentence_bert_cosine.ipynb
+++ b/siamese/sentence_bert_cosine.ipynb
@@ -62,10 +62,10 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0 jsonlines==1.2.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
-    "    %cd '/content/drive/My Drive/CS646_Final_Project'\n",
+    "    %cd '/content/drive/My Drive/CS646_Final_Project/siamese'\n",
     "    \n",
     "    # List the directory contents\n",
     "    !ls"
@@ -1091,13 +1091,6 @@
     "        with open(os.path.join(test_restaurants_result_path, test_restaurants_result_file), 'a') as f:\n",
     "            f.write(\"%s\\n\" % line)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
