--- a/siamese/sentence_bert_online_contrastive.ipynb
+++ b/siamese/sentence_bert_online_contrastive.ipynb
@@ -83,10 +83,10 @@
     "    drive.mount('/content/drive')\n",
     "    \n",
     "    # If there's a package I need to install separately, do it here\n",
-    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0\n",
+    "    !pip install sentence-transformers==0.3.9 transformers==3.4.0 jsonlines==1.2.0\n",
     "\n",
     "    # cd to the appropriate working directory under my Google Drive\n",
-    "    %cd '/content/drive/My Drive/CS646_Final_Project/Siamese'\n",
+    "    %cd '/content/drive/My Drive/CS646_Final_Project/siamese'\n",
     "    \n",
     "    # List the directory contents\n",
     "    !ls"
@@ -295,10 +295,10 @@
    "outputs": [],
    "source": [
     "# 0-1 label (for contrastive loss)\n",
-    "with open(os.path.join('.', 'data', 'our_datasets', 'laptop_train.json')) as laptop_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets', 'laptop_train.json')) as laptop_train_file:\n",
     "    laptop_train = json.load(laptop_train_file)\n",
     "\n",
-    "with open(os.path.join('.', 'data', 'our_datasets', 'restaurant_train.json')) as restaurants_train_file:\n",
+    "with open(os.path.join('..', 'data', 'our_datasets', 'restaurant_train.json')) as restaurants_train_file:\n",
     "    restaurants_train = json.load(restaurants_train_file)"
    ]
   },
