--- a/siamese/sentence_bert_softmax.ipynb
+++ b/siamese/sentence_bert_softmax.ipynb
@@ -799,7 +799,7 @@
    },
    "outputs": [],
    "source": [
-    "test_laptop_documents_path = os.path.join('..', 'bm25', 'collection', 'laptop_test.jsonl')\n",
+    "test_laptop_documents_path = os.path.join('..', 'bm25', 'collection', 'laptop_test', 'laptop_test.jsonl')\n",
     "test_laptop_documents_file = jsonlines.open(test_laptop_documents_path)"
    ]
   },
@@ -943,7 +943,7 @@
    },
    "outputs": [],
    "source": [
-    "test_restaurants_documents_path = os.path.join('..', 'bm25', 'collection', 'restaurant_test.jsonl')\n",
+    "test_restaurants_documents_path = os.path.join('..', 'bm25', 'collection', 'restaurant_test', 'restaurant_test.jsonl')\n",
     "test_restaurants_documents_file = jsonlines.open(test_restaurants_documents_path)"
    ]
   },
