--- a/bm25/02_run_bm25.ipynb
+++ b/bm25/02_run_bm25.ipynb
@@ -214,7 +214,10 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_laptop.search(q=query, k=top_k)\n",
+    "        # Ignore the sentiment term\n",
+    "        query_no_sentiment = query.split(',')[0]\n",
+    "        \n",
+    "        hits = searcher_laptop.search(q=query_no_sentiment, k=top_k)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +282,10 @@
     "    for query in f:\n",
     "        q_num += 1\n",
     "        \n",
-    "        hits = searcher_restaurant.search(q=query, k=top_k)\n",
+    "        # Ignore the sentiment term\n",
+    "        query_no_sentiment = query.split(',')[0]\n",
+    "        \n",
+    "        hits = searcher_restaurant.search(q=query_no_sentiment, k=top_k)\n",
     "\n",
     "        for i in range(len(hits)):\n",
     "            line = str(q_num) + ' Q0 ' + hits[i].docid + ' ' + str(i+1) + ' ' + '%.8f' % hits[i].score + ' bm25'\n",
