bm25 test: query file names change

--- a/bm25/02_run_bm25.ipynb
+++ b/bm25/02_run_bm25.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "index_path_laptop = os.path.join('.', 'index', 'laptop_test')\n",
-    "queries_path_laptop = os.path.join('test_queries_laptop.txt')\n",
+    "queries_path_laptop = os.path.join('test_queries_laptop_original.txt')\n",
     "results_path_laptop = os.path.join('test_results_laptop_bm25.txt')"
    ]
   },
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "index_path_restaurant = os.path.join('.', 'index', 'restaurant_test')\n",
-    "queries_path_restaurant = os.path.join('test_queries_restaurant.txt')\n",
+    "queries_path_restaurant = os.path.join('test_queries_restaurant_original.txt')\n",
     "results_path_restaurant = os.path.join('test_results_restaurant_bm25.txt')"
    ]
   },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
